# ezid-ops-scripts

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  docker_compose_cmd.notes  docker_compose_cmd.txt  how_to_run_ezid_in_docker.md  requirements.txt
.github/workflows/: ezid-tests.yml  ui-tests.yml
ecs-log-routers/n2t/: Dockerfile  docker-build-cmd.txt  n2t-fluentbit.conf
scripts/: Dockerfile  README.md  check_waf_block.py  create_datacite_dois_from_xml_file.py  create_update_datacite_dois_from_xml_file.py  dump-queue-tables_ops.sh  dump_nog_bdb.py  ezid_ui_tests.py  ezid_ui_tests_docker.py  ezid_ui_tests_remote.py  requirements.txt  restore-database-tables_ops.sh  retrive_dacite_records.py  run_ezid_tests.sh  start_stop_ezid_services.sh  ui_test_login.py  verify_ezid_after_patching.py  verify_ezid_status.py
scripts/batch_delete/: README.md  batch_delete.py
scripts/convert_rgpo_file_to_ezid_batch_format/: README.md  convert_rgpo_file_to_ezid_batch_format.py  rgpo_map.txt
scripts/load_testing/: README.md  pyproject.toml
scripts/load_testing/getid/: locustfile.py
scripts/retrieve_datacite_records_by_query_client/: README.md  retrieve_datacite_records_by_query_client.py
scripts/sql_scripts/: 723_delete_binder_queue.sql  723_update_queue_status.sql
scripts/test-n2t-waf-rules/: README.md  check_resolution.py
scripts/test_n2t_api/: README.md  test_n2t_api.py
scripts/test_records/: crossref_doi_10.15697_journal.txt  crossref_doi_10.15697_posted_content.txt  datacite_ark_99999_fk4.txt  datacite_doi_10.5072_FK2.txt  records_created.ids  (+5 more)
(+12 files in other folders)
