[tool.poetry]
name = "ezid-load-test"
version = "0.1.0"
description = "Locust scripts for EZID load testing"
authors = ["datadavev <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ezid_load_test"}]

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.14.2"
PyMySQL = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
